src/components/ProjectCard/ProjectCard.scss
.project-card {
  position: relative;
  width: 100%;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  cursor: pointer;

  .project-image {
    width: 100%;
    height: auto;
    display: block;
    transition: transform 0.3s ease;
    aspect-ratio: 4 / 4;
  }

  .project-overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.7);
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: center;
    opacity: 0;
    transition: opacity 0.6s ease;
    padding: 40px 40px;
    text-align: center;
    gap: 15px;
    cursor: pointer;
  }

  .project-title {
    color: #fff;
    font-size: 1.5rem;
    margin: 0;
  }

  .project-description {
    text-align: start;
    color: #fff;
    font-size: 1rem;
  }

  .project-technologies {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 10px;
  }

  .tech-tag {
    background-color: #fff;
    color: #3e3b3b;
    padding: 5px 10px;
    border-radius: 20px;
    font-size: 0.8rem;
    font-weight: bold;
  }

  &:hover {
    .project-image {
      transform: scale(1.01);
    }

    .project-overlay {
      opacity: 1;
    }
  }
}

@media (max-width: 768px) {
  .project-card {

    .project-image {
      min-height: 250px;
    }

    .project-overlay {
      justify-content: center;
    }
  }
}

